# Clusterization

./: .gitignore  CMakeLists.txt  main.cpp
algorithm/: CMakeLists.txt  config.h  main.cpp
algorithm/configuration/: config.h  state_handler.h
algorithm/data_structures/: domain.h  point.h  solution.h  target.h
algorithm/solver/: solution.h  solver.cpp  solver.h
dataclasses/: config.h  domain.cpp  domain.h  point.h
io/: file_handler.h
solver/: solver.h
testing/: CMakeLists.txt  main.cpp
testing/generation/: main.py
testing/generation/data_structs/: __init__.py  axis_interval.py  config.py  epsilon.py  point.py
testing/generation/generation/: __init__.py  generator.py  solution.py
testing/generation/input_output/: __init__.py  input_output.py
testing/lib/json/: jsoncpp.cpp
testing/parser/: json_parser.h
testing/unit_testing/: CMakeLists.txt  main.cpp
testing/unit_testing/data_structures/: domain_tests.h  point_tests.h  solution_tests.h  target_tests.h
